--- a/WSFile/src/main/webapp/file-manager.html
+++ b/WSFile/src/main/webapp/file-manager.html
@@ -14,29 +14,6 @@
 <body onload="readTextFile('filegoogle.json');">
 	<div id="content">
 		<ul id="treemenu" class="treeview">
-			<li>Item 1</li>
-
-			<li>Folder 1
-				<ul>
-					<li>Sub Item 1.1</li>
-					<li>Folder 1.1
-						<ul>
-							<li>Sub Item 1.1.1</li>
-							<li>Sub Item 1.1.2</li>
-							<li>Folder 1.1.1
-								<ul>
-									<li>Sub item 1.1.1.1</li>
-									<li>Sub item 1.1.1.2</li>
-									<li>Sub item 1.1.1.3</li>
-									<li>Sub item 1.1.1.4</li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-				</ul>
-			</li>
-
-			<li>Item 2</li>
 		</ul>
 	</div>
 	<script type="text/javascript">
@@ -62,7 +39,7 @@
 			var index = 0;
 			var len=listitem.length;
 			for (index = 0; index < len; ++index) {
-			    content = content + '<li>' + listitem[index].title + '</li>';
+					content = content + '<li>' + listitem[index].parents[0].isRoot + '</li>';				
 			}
 			document.getElementById("treemenu").innerHTML = content;
 		}
